# rhylthyme-spec

./: README.md  pyproject.toml  setup.py
src/rhylthyme_spec/: __init__.py
src/rhylthyme_spec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rhylthyme_spec/schemas/: environment_schema_0.1.0-alpha.json  program_schema_0.1.0-alpha.json
